# deepblue-auv-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirments.txt
models/: ppo_auv_target_1000_training_summary.json  ppo_curriculum_new_fixed_no_obstacles_50000_steps_seed_42_training_summary.json  ppo_curriculum_new_fixed_obstacles_150000_steps_seed_42_training_summary.json  ppo_curriculum_new_moving_no_obstacles_100000_steps_seed_42_training_summary.json  ppo_curriculum_new_moving_obstacles_150000_steps_seed_42_training_summary.json  ppo_curriculum_v3_random_start_no_obstacles_100000_steps_seed_42_training_summary.json  ppo_fixed_no_obstacles_obs8_fixed_no_obstacles_20000_steps_seed_42_training_summary.json  ppo_obs8_smoke_test_fixed_no_obstacles_1000_steps_seed_42_training_summary.json
scripts/: check_holoocean_install.py  create_cross_eval_summary.py  evaluate_fixed_no_obstacles.py  evaluate_model.py  evaluate_policy.py  evaluate_random_policy.py  evaluate_target_seeking_baseline.py  inspect_state.py  install_ocean_package.py  local_check.py  plot_evaluation_results.py  random_rollout.py  sample_model.py  save_rollout_trajectory.py  setup_runpod.sh  test_evaluation_metrics.py  test_gpu.py  test_gym_wrapper.py  test_holoocean.py  train.ppo.py  train_ppo.py
src/deepblue_auv_rl/: __init__py
src/deepblue_auv_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepblue_auv_rl/envs/: __init__.py  auv_target_env.py
src/deepblue_auv_rl/evaluation/: __init__.py  evaluate.py  metrics.py
